# nexusdb

./: .gitignore  Cargo.toml  README.md  index.db  perf.data  perf.data.old
benches/: benchmark_tests.rs
src/: lib.rs  main.rs
src/data_processing/: mod.rs  workerpool.rs
src/index_manager/: index_manager.rs  mod.rs
src/interpreter/: btree.rs  cursor.rs  expression.rs  header.rs  mod.rs  pager.rs  parser.rs  query.rs  record.rs  schema.rs  test_utils.rs  token.rs  utils.rs  value.rs
src/storage/: file.rs  mod.rs  nffile.rs
src/utils/: abs_path.rs  mod.rs
