[package]
name = "nexusdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3", features = ["v4"] }
once_cell = "1.8.0"
rayon = "1.6"
crossbeam = "0.8"
memmap2 = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_tests"
harness = false  # 确保使用 Criterion 的自定义测试驱动程序